<resources>
    <string name="app_name">My first Android App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Name</string>
    <string name="profile_age">Age</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="profile_create_title">Create new profile</string>
    <string name="save">Save</string>
    <string name="btn_goto_profile_list">See all profiles</string>
    <string name="title_activity_list_profiles">ListProfilesActivity</string>
    <string name="title_list_profiles">Profiles list</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
</resources>
