<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cedric.myfirstandroidapp.activity.profile.CreateProfileActivity">

    <TextView android:text="@string/profile_create_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_new_profile" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/new_profile_name"
        android:layout_below="@+id/title_new_profile"
        android:layout_alignEnd="@+id/title_new_profile"
        android:layout_marginTop="64dp"
        android:hint="@string/profile_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_profile_age"
        android:layout_below="@+id/new_profile_name"
        android:layout_alignStart="@+id/new_profile_name"
        android:layout_marginTop="42dp"
        android:hint="@string/profile_age" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_profile"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/genderRadioGroup"
        android:layout_below="@+id/new_profile_age"
        android:layout_alignStart="@+id/new_profile_age"
        android:layout_marginTop="42dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:id="@+id/radioButtonMale"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:id="@+id/radioButtonFemale"
            android:checked="false" />
    </RadioGroup>

</RelativeLayout>
